--- a/app/src/main/res/layout/item_listing.xml
+++ b/app/src/main/res/layout/item_listing.xml
@@ -16,6 +16,8 @@
 
             <TextView
                 android:id="@+id/txtRepoName"
+                android:layout_margin="5dp"
+                android:textSize="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
