--- a/app/src/main/res/layout/activity_listing_repositories.xml
+++ b/app/src/main/res/layout/activity_listing_repositories.xml
@@ -6,7 +6,10 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     tools:context="com.example.admin.restapiassigment.ListingRepositories">
-
+<android.support.v7.widget.SearchView
+    android:id="@+id/search_bar"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"/>
 <android.support.v7.widget.RecyclerView
     android:id="@+id/RVList"
     android:layout_width="match_parent"
